##########################
# Setup.py Configuration #
##########################
[metadata]
name = bio2bel_hp
version = 0.1.1-dev
description = A package for converting Human Phenotype Ontology to BEL Namespace
long_description = file: README.rst

# URLs associated with PyBEL
url = https://github.com/bio2bel/hp
download_url = https://github.com/bio2bel/hp/releases
project_urls =
    Bug Tracker = https://github.com/bio2bel/hp/issues
    Source Code = https://github.com/bio2bel/hp
	Documentation = https://pybel.readthedocs.io

# Author information
author = Charles Tapley Hoyt
author_email = charles.hoyt@scai.fraunhofer.de
maintainer = Charles Tapley Hoyt
maintainer_email = charles.hoyt@scai.fraunhofer.de

# License Information
license = MIT License
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 4 - Beta
	Environment :: Console
    Intended Audience :: Developers
	Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
	Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3 :: Only
	Topic :: Scientific/Engineering :: Bio-Informatics
	Topic :: Scientific/Engineering :: Chemistry
keywords =
	Biological Expression Language
	BEL
	Domain Specific Language
	DSL
	Systems Biology
	Networks Biology

[options]
install_requires =
    bel-resources @ git+https://www.github.com/cthoyt/bel-resources.git
    bio2bel[obo] @ git+https://www.github.com/bio2bel/bio2bel.git
    click

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.6

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
docs =
	sphinx
	sphinx-rtd-theme
	sphinx-click
	sphinx-autodoc-typehints

[options.entry_points]
console_scripts =
    bio2bel_hp = bio2bel_hp.cli:main
bio2bel =
    hp = bio2bel_hp

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = bio2bel_hp
omit =
    tests/*
    docs/*
    scripts/*

[coverage:paths]
source =
    src/bio2bel_hp
    .tox/*/lib/python*/site-packages/bio2bel_hp

[coverage:report]
show_missing = True
exclude_lines =
    def __str__
    def __repr__
